fixes bug 232385 "nsIRequest::INIHIBIT_CACHING not implemented" r=dougt sr=bzbarsky