netwerk/protocol/http/src/nsHttpChannel.h
@@ -132,7 +132,7 @@ private:
     nsresult OpenCacheEntry(PRBool offline, PRBool *delayed);
     nsresult GenerateCacheKey(nsACString &key);
     nsresult UpdateExpirationTime();
-    nsresult CheckCache();
+    nsresult CheckCache(PRBool offline);
     nsresult ReadFromCache();
     nsresult CloseCacheEntry(nsresult status);
     nsresult InitCacheEntry();
